Updated css for chat-messages aligned center and fixed border

--- a/src/containers/Chat/ChatMessages/ChatMessage/ChatMessage.module.css
+++ b/src/containers/Chat/ChatMessages/ChatMessage/ChatMessage.module.css
@@ -1,11 +1,11 @@
 .ChatMessage {
-  display: inline-block;
+  display: flex;
+  justify-content: center;
   position: relative;
   max-width: 100%;
   border-radius: 12px;
   font-family: 'Heebo', sans-serif, emoji;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
-
   clear: both;
   max-width: 404px;
   min-width: 85px;
